# kaa-mahina-mobility

./: .clang-format  .clangd  .gitignore  .gitmodules  README.md  ccbuild.bash  install_libs.sh
src/cr_bag/: CMakeLists.txt  package.xml
src/cr_bag/cr_bag/: record_trial.py  trial_executor.py  trial_menu.py  trial_menu_and_runner.py
src/cr_bag/launch/: bag_recorder.launch.py
src/cr_bag/srv/: StartBag.srv  StartTrial.srv  StopBag.srv
src/cr_bringup/: CMakeLists.txt  launch_instructions.txt  package.xml
src/cr_bringup/cr_bringup/: cr_bringup.py  left_camera.bash  right_camera.bash
src/cr_bringup/launch/: bringup.launch.py  camera.launch.py  controller.launch.py
src/cr_hardware/: CMakeLists.txt  cr_hardware.xml  package.xml  setup.cfg  setup.py
src/cr_hardware/config/: bno055_calibration.yaml  calibration.txt  differential_drive.yaml
src/cr_hardware/cr_hardware/: arduino_driver.py  camera.py  field_test_node.py  field_test_node_copy.py  joy_to_twist_node.py  lower_mechanism_test_server.py  moisture_sensor.py  moisture_sensor_temp.py  navigate_client.py  navigate_to_position_server.py  test_service.py
src/cr_hardware/cr_hardware/submodules/: serial_handler  serial_handler.py
src/cr_hardware/description/ros2_control/: cuberover.ros2_control.xacro
src/cr_hardware/description/urdf/: cuberover.urdf.xacro  diffbot_description.urdf.xacro
src/cr_hardware/include/cr_hardware/: differential_drive.hpp  differential_drive_hardware.hpp  roboclaw.h
src/cr_hardware/launch/: bno055_imu_launch.py  control.launch.py  differential_drive.launch.py  differential_drive_launch.py  hardware.launch.py
src/cr_hardware/lib/libroboclaw/: CMakeLists.txt
src/cr_hardware/lib/libroboclaw/examples/: test_roboclaw_connection.cpp
src/cr_hardware/lib/libroboclaw/include/libroboclaw/: roboclaw_driver.hpp
src/cr_hardware/lib/libroboclaw/src/: TimeoutSerial.cpp  roboclaw_driver.cpp
src/cr_hardware/src/: bno055.cpp  bno055_calibrate.cpp  bno055_node.cpp  differential_drive.cpp  differential_drive_hardware.cpp  differential_drive_temp.cpp  lowering_mechanism.cpp  roboclaw.c  roboclaw.cpp  roboclaw.h  test_roboclaw.c  test_roboclaw.cpp
src/cr_interfaces/: CMakeLists.txt  package.xml
src/cr_interfaces/action/: Navigate.action
src/cr_interfaces/srv/: GetNextWaypoint.srv
src/cr_localization/: CMakeLists.txt  package.xml
src/cr_localization/config/: ekf_config.yaml  navsat_transform_config.yaml
src/cr_localization/launch/: dual_ekf.launch.py  ekf_launch.py  navsat_transform_launch.py
src/cr_mission_planner/: CMakeLists.txt  README.md  package.xml
src/cr_mission_planner/config/: cr_mission_planner.yaml
src/cr_mission_planner/include/cr_mission_planner/: generate_gps_grid.hpp  global_blackboard.hpp  sm_trial_planner.hpp
src/cr_mission_planner/include/cr_mission_planner/clients/smacc_service_client/client_behaviors/: cb_call_service.hpp
src/cr_mission_planner/include/cr_mission_planner/clients/smacc_subscriber_client/client_behaviors/: cb_timed_subscriber.hpp
src/cr_mission_planner/include/cr_mission_planner/orthogonals/: or_get_next_waypoint.hpp  or_lowering_mechanism.hpp  or_navigate.hpp  or_subscribe_measurement.hpp
src/cr_mission_planner/include/cr_mission_planner/states/: st_get_next_waypoint.hpp  st_measure_state.hpp  st_navigate_state.hpp
src/cr_mission_planner/launch/: cr_mission_planner.launch.py  sm_trial_planner.launch
src/cr_mission_planner/src/cr_mission_planner/: sm_trial_planner.cpp
src/vicon_receiver/: CMakeLists.txt
